vlib/v/checker/tests/globals/assign_no_type.vv
__global ( test = 0 )